# marit_backtesting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo.py  test_beta_strategy.py  test_real_data.py
src/marit_backtesting/: __init__.py  backtester.py  reporting.py  utils.py
tests/: test_backtester.py
